fmt <apples and pears#204>

--- a/wiki/apples_and_pears.wikitext
+++ b/wiki/apples_and_pears.wikitext
@@ -1,10 +1,5 @@
-[Ap-ples and pears] /____/
+==English==
+===Noun===
+'''apples and pears'''
 
-''noun''
-
-1)Cockney Rhyming Slang for Stairs.
-
-
-===Translations===
-
-[[English]]: [[Stairs]]
+#(''[[Cockney rhyming slang]]'') [[Stairs]].
