+usage note <Adam and Eve#64674>

--- a/wiki/Adam_and_Eve.wikitext
+++ b/wiki/Adam_and_Eve.wikitext
@@ -4,3 +4,6 @@
 
 #(''[[Cockney rhyming slang]]'') [[Believe]].
 #:''Would you Adam and Eve it, I've only gone an' lost me wallet, ain't I?''
+
+====Usage note====
+*Restricted to a few [[set phrase]]s, such as '''Would you Adam and Eve it'''.
