/* Noun */ <apples and pears#204>

--- a/wiki/apples_and_pears.wikitext
+++ b/wiki/apples_and_pears.wikitext
@@ -1,5 +1,5 @@
 ==English==
-===Noun===
+===Noun phrase===
 '''apples and pears''' ''plural''
 
-#(''[[Cockney rhyming slang]]'') [[Stairs]].
+#(''[[Cockney rhyming slang]]'') [[Stair]]s.
