--- a/wiki/lady.wikitext
+++ b/wiki/lady.wikitext
@@ -62,7 +62,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Italian: [[signora]] ''f''
-*Russian: [[госпожа]] /gospoja/ 
+*Russian: [[госпожа]] (gospozha)
 *Spanish: [[señora]] ''f''
 |}
 |}
