def <Barclays Bank#64676>

--- a/wiki/Barclays_Bank.wikitext
+++ b/wiki/Barclays_Bank.wikitext
@@ -2,4 +2,4 @@
 ===Noun phrase===
 '''Barclays Bank'''
 
-#(''[[Cockney rhyming slang]]'') [[Wank]] (''noun'').
+#(''[[Cockney rhyming slang]]'') [[Wank]] (''action of the verb'').
