de:extensiv <extensive#41277>

--- a/wiki/extensive.wikitext
+++ b/wiki/extensive.wikitext
@@ -21,3 +21,5 @@
 *Portuguese: [[extensivo]] ''m'', [[extensiva]] ''f''
 *Russian: [[обширный]] ''m'', [[обширная]] ''f'', [[обширное]] ''n''
 *Spanish: [[extenso]] ''m'', [[extensa]] ''f''
+
+[[de:extensiv]]
