+etym & alt spelling <wino#61109>

--- a/wiki/wino.wikitext
+++ b/wiki/wino.wikitext
@@ -1,7 +1,11 @@
 ==English==
+===Etymology===
+[[wine]] + [[-o]]
 
 ===Noun===
-
 '''wino'''
 
-#A wine-drinking alcoholic.
+#A wine-drinking [[alcoholic]].
+
+====Alternate spellings====
+*[[wine-o]]
