--- a/wiki/%E6%B8%89.wikitext
+++ b/wiki/%E6%B8%89.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': ford stream
+* '''Common Meaning''': [[ford]] [[stream]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -32,7 +32,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[しょう]] (shō)
@@ -42,9 +42,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 섭
+* '''[[Hangeul]]''': [[섭]]
 
 * '''[[Eumhun]] reading''': 
 
