--- a/wiki/Bristol.wikitext
+++ b/wiki/Bristol.wikitext
@@ -7,7 +7,7 @@
 ===Noun===
 '''bristol''' (''plural'' '''bristols''')
 
-#(''[[Cockney rhyming slang]]''; ''usually in plural''; ''shortened from'' '''Bristol City''', ''the name of an English football team, for'' '''titty''') [[Breast]]s.
+#(''[[Cockney rhyming slang]]''; ''usually in plural''; ''shortened from'' '''Bristol City''', ''the name of an English football team, for'' '''titty''') A woman's [[breast]].
 
 ===See also===
 *[[w:Bristol|Wikipedia article on Bristol]]
