--- a/wiki/dragon_boat.wikitext
+++ b/wiki/dragon_boat.wikitext
@@ -5,4 +5,4 @@
 
 ====Translations====
 *Chinese: [[龍舟]], [[龙舟]] (lóngzhōu)
-*Persian: [[اژدهابَلم]] (ezhdeha-balam)
+*[[Persian]]: [[اژدهابلم|اژدهابَلم]] (ezhdeha-balam)
