--- a/wiki/gorblimey.wikitext
+++ b/wiki/gorblimey.wikitext
@@ -6,6 +6,6 @@ Representing a [[Cockney]] pronunciation of "God blind me".
 '''gorblimey!'''
 
 ====Variant spellings====
-*'''gor blimey!'''
+*'''Gor blimey!'''
 
 #(''British'') Expressing surprise, etc.
