--- a/wiki/ant.wikitext
+++ b/wiki/ant.wikitext
@@ -63,6 +63,7 @@
 *Tagalog: [[langgam]]
 *Tamil: [[எறும்பு]] (erumpu)
 *[[Torres Strait Creole]]: [[anis]]
+*Turkish: [[karınca]]
 *[[Wembawemba]]: [[tyilep-tyilep]]
 *[[Wik-Mungkan]]: [[moolan]]
 *[[Wiradjuri]]: [[dhuurruuy]]
