--- a/wiki/alloy.wikitext
+++ b/wiki/alloy.wikitext
@@ -8,6 +8,7 @@
 *[[w:IPA|IPA]]: /'ælɒj/
 
 ====Translations====
+*Chinese: [[合金]]
 *Dutch: [[legering]] ''f''
 *Finnish: [[seos]], [[metalliseos]], [[lejeerinki]]
 *German: [[Legierung]] ''f''
