/* Translations */ +fr <alloy#4782>

--- a/wiki/alloy.wikitext
+++ b/wiki/alloy.wikitext
@@ -11,6 +11,7 @@
 *Chinese: [[合金]]
 *Dutch: [[legering]] ''f''
 *Finnish: [[seos]], [[metalliseos]], [[lejeerinki]]
+*{{fr}}: [[alliage]] ''m''
 *German: [[Legierung]] ''f''
 *Indonesian: [[padu|paduan]] [[logam]]
 *Japanese: [[合金]] (ごうきん, gōkin)
