--- a/wiki/bag_lady.wikitext
+++ b/wiki/bag_lady.wikitext
@@ -2,4 +2,4 @@
 ===Noun phrase===
 '''[[bag]] [[lady]]'''
 
-# (''colloquial'') A [[homeless]] woman who carries her possessions with her in a bag.
+# (''colloquial'') A [[homeless]] woman who carries her possessions with her in bags.
