translated and transfered to de.wiktionary.org <fick#64688>

--- a/wiki/fick.wikitext
+++ b/wiki/fick.wikitext
@@ -1,5 +1,10 @@
-1. Der Sexuelle Akt
-''Das war ein guter Fick''
+==German==
+===Noun===
+'''Fick''' ''m''
 
-2. Ein Sexualpartner
-''Sie war ein guter Fick''
+# The sexual act, [[fuck]]
+#:''Das war ein guter Fick''
+# A sexual partner, [[fuck]]
+#:''Sie war ein guter Fick''
+
+[[de:Fick]]
