translated and transfered to de.wiktionary.org <ficken#64689>

--- a/wiki/ficken.wikitext
+++ b/wiki/ficken.wikitext
@@ -1,2 +1,5 @@
-Ficken ist ein altbekanntes Wort. Etymologisch hat ein Römer schon das Wort ''feickenus'' gebraucht. Also ist es schon sehr sehr alt.
-Das Wort umschreibt nicht nur den sexuellen Akt, sondern kann auch mit unangenehmer Arbeit zusammenhängen ->''hirnficken''
+==German==
+===Verb===
+'''ficken'''
+
+# to [[fuck]]
