--- a/wiki/sweet_sixteen.wikitext
+++ b/wiki/sweet_sixteen.wikitext
@@ -1,15 +1,18 @@
 ==English==
+===Noun phrase===
+'''sweet sixteen'''
 
-===Noun Phrase===
+# (''US, colloquial'') A girl's [[sixteenth]] [[birthday]], or sixteenth-birthday party.
+
+===Proper noun phrase===
 '''Sweet Sixteen'''
 
-# (''US, colloquial'') A girl's sixteenth birthday, or sixteenth birthday party.
 # (''basketball, US, colloquial'') The sixteen teams participating in the third round of the NCAA Division I tournament, one of whom will become the national champion.
 # (''basketball, US, colloquial'') The third round of the NCAA Division I tournament.
 # (''basketball, US, colloquial'') An appearance in the Sweet Sixteen.
 #: ''The new coach has just led the Nimrods to their first Sweet Sixteen.''
 
-===See Also===
+===See also===
 *[[Final Four]]
 *[[Elite Eight]]
 *[[March Madness]]
