--- a/wiki/cobblers.wikitext
+++ b/wiki/cobblers.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Shortened from ''cobbler's awls'', for ''[[balls]]'' (nonsense)
+Shortened from ''cobbler's awls'', for ''[[ball]]s'' (nonsense)
 
 #(''[[Cockney rhyming slang]]'') [[Nonsense]].
 #:''Stop talking cobblers.''
