proper defs <gorgeous#64705>

--- a/wiki/gorgeous.wikitext
+++ b/wiki/gorgeous.wikitext
@@ -1,2 +1,6 @@
-(v.)see beautiful
-(n.)Krista Lemieux
+==English==
+===Adjective===
+'''gorgeous''' (''[[comparative]]'' '''more gorgeous''', ''[[superlative]]'' '''most gorgeous''')
+
+#Of a person or place, very [[beautiful]].
+#Of food, very [[delicious]].
