--- a/wiki/sexy.wikitext
+++ b/wiki/sexy.wikitext
@@ -1,7 +1,5 @@
+==English==
 ===Adjective===
+'''sexy''' (''[[comparative]]'' '''sexier''', ''[[superlative]]'' '''sexiest''')
 
-'''Sexy'''
-
-#Possessing sexual appeal.
-
-<!-- created by LaughingMan -->
+#Having sexual appeal.
