+plural <bag lady#64633>

--- a/wiki/bag_lady.wikitext
+++ b/wiki/bag_lady.wikitext
@@ -1,5 +1,5 @@
 ==English==
 ===Noun phrase===
-'''[[bag]] [[lady]]'''
+'''[[bag]] [[lady]]''' (''plural'' '''bag ladies''')
 
-# (''colloquial'') A [[homeless]] woman who carries her possessions with her in bags.
+# (''colloquial'') A [[homeless]] woman who carries her [[possession]]s with her in bags.
