+plural <old lady#64709>

--- a/wiki/old_lady.wikitext
+++ b/wiki/old_lady.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun phrase===
-'''old lady'''
+'''old lady''' (''plural'' '''old ladies''')
 
 #An [[elderly]] woman.
 #(''slang'') One's [[mother]].
