/* Examples of Cockney rhyming slang in common use */ <Cockney rhyming slang#64673>

--- a/wiki/Cockney_rhyming_slang.wikitext
+++ b/wiki/Cockney_rhyming_slang.wikitext
@@ -32,7 +32,7 @@
 *[[jam-jar]]<!--car-->
 *[[joanna]]<!--piano-->
 *[[khyber]]<!--shortened from "Khyber Pass", for "arse"-->
-*[[mince pies]]<!--eyes-->
+*[[mince pie]]<!--eye-->
 *[[nelly]]<!--shortened from "Nelly Duff", for "puff", meaning "life"; used in the phrase "not on your nelly!"-->
 *[[north and south]]<!--mouth-->
 *[[pen and ink]]<!--stink (noun)-->
