+ alternate meaning + [[Category:Onomatapoiea]] <schwing#512622>

--- a/wiki/schwing.wikitext
+++ b/wiki/schwing.wikitext
@@ -1,4 +1,4 @@
-Originating in Wayne's World, an exclamation of happiness:
+Originating in Wayne's World, an exclamation of happiness or appreciation for the female form:
 
 "You've just won the lottery!"
 "Schwing!"
@@ -7,4 +7,10 @@ Or,
 
 "Schwing! I just beat the game!"
 
+Or,
+
+"[[Tia Carrere]] is such a hot babe. Schwing!"
+ 
 Not to be confused with "schwingen," German for "to swing."
+
+[[Category:Onomatopoeia]]
