wikify Wayne'sWorld <schwing#512622>

--- a/wiki/schwing.wikitext
+++ b/wiki/schwing.wikitext
@@ -1,4 +1,4 @@
-Originating in Wayne's World, an exclamation of happiness or appreciation for the female form:
+Originating in the movie [[Wayne's World]], an exclamation of happiness or appreciation for the female form:
 
 "You've just won the lottery!"
 "Schwing!"
