--- a/wiki/syrup.wikitext
+++ b/wiki/syrup.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''syrup''' (''[[countable]] and [[uncountable]]''; ''plural'' '''syrups''')
 
-#Any thick, [[edible]] liquid having a high [[sugar]] [[content]].
+#Any thick liquid that is added to or poured over food as a flavouring and has a high [[sugar]] [[content]].
 #:''maple syrup''
 #(''[[Cockney rhyming slang]]''; ''shortened from'' '''[[syrup of figs]]''') A [[wig]].
 
