modified "china plate" def and added example <China#2319>

--- a/wiki/China.wikitext
+++ b/wiki/China.wikitext
@@ -59,8 +59,9 @@
 
 #[[Ceramic]] or [[porcelain]] <!-- isn't it just one type of porcelain? [[User:Hippietrail|Hippietrail]] 08:19, 20 Feb 2004 (UTC) -->
 #Teacups, saucers, etc made from china.
-#Rhyming slang for 'mate' (partner), as in 'china plate'.
-#A type of cymbal used in a drumset.  It has a 'trashy', swishy sound, and can either be ridden or crashed.  Usually 16"-20".
+#(''[[Cockney rhyming slang]]''; ''shortened from ) [[Mate]] (i.e., friend).
+#:''All right, me old china?''
+#A type of cymbal used in a drum kit, about 16 to 20 inches across, having a "trashy", swishy sound, and that is ridden or crashed.
 
 ====Related terms====
 *[[bone china]]
