/* Translations to be checked */ <table#38559>

--- a/wiki/table.wikitext
+++ b/wiki/table.wikitext
@@ -92,7 +92,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 *[[Basque]]: [[mahai]]
 *Bulgarian: [[таблица]] ''f'' (2), [[таблица за умножение]] ''f'' (3)
 *French: table ''f'' (2), [[tableau#French|tableau]] ''m'' (2)
-*German: [[Tabelle]] ''f'' (2)
+*German: [[Tisch]] ''f'' (2)
 *Indonesian: [[meja]]
 *Italian: [[tavola]] ''f'' (2), [[tavolo]] ''m'' (1)
 *Latin: [[tabula]] ''f'' (2, 3, 4)
