--- a/wiki/China.wikitext
+++ b/wiki/China.wikitext
@@ -8,8 +8,7 @@
 
 # Country in East Asia. Official name: People's Republic of China.
 # Region in East Asia comprising the areas governed by the People's Republic of China and the Republic of China ([[Taiwan]]).
-# The civilisation (civilization) of the Chinese people.
-
+# The civilisation/civilization of the Chinese people.
 
 ====Translations====
 *Arabic: [[الصين]] (aṣ-ṣīn)
@@ -46,7 +45,7 @@
 *[[Urdu]]: [[چين]] (čīn)
 *Vietnamese: [[Trung quốc]]
 
-====Related terms====
+====Derived terms====
 *[[Chinese]]
 
 ====See also====
@@ -55,83 +54,121 @@
 *[[Countries of the world]]
 
 ===Noun===
-'''china'''
+'''china''' (''[[countable]] and [[uncountable]]'')
 
-#[[Ceramic]] or [[porcelain]] <!-- isn't it just one type of porcelain? [[User:Hippietrail|Hippietrail]] 08:19, 20 Feb 2004 (UTC) -->
-#Teacups, saucers, etc made from china.
-#(''[[Cockney rhyming slang]]''; ''shortened from ) [[Mate]] (i.e., friend).
+#(''uncountable'') [[Ceramic]] or [[porcelain]] <!-- isn't it just one type of porcelain? [[User:Hippietrail|Hippietrail]] 08:19, 20 Feb 2004 (UTC) -->
+#(''uncountable'') [[Tableware]] made from china.
+#(''[[Cockney rhyming slang]]''; ''shortened from'' '''china plate'''; ''countable'')) [[Mate]] (i.e., friend).
 #:''All right, me old china?''
-#A type of cymbal used in a drum kit, about 16 to 20 inches across, having a "trashy", swishy sound, and that is ridden or crashed.
+#(''countable'') A type of cymbal used in a drum kit, about 16 to 20 inches across, having a "trashy", swishy sound, and that is ridden or crashed.
 
-====Related terms====
+====Derived terms====
 *[[bone china]]
 
 ====Translations====
+
+'''porcelain'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
 *Chinese Characters: [[炻]]<!-- just one kind of china -->
-*Italian: [[porcellana]] ''f'' (1)
+*Italian: [[porcellana]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''tableware made from china'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''Cockney rhyming slang: mate'''
+''See'' [[mate]]
+
+'''cymbal'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
 
 ===Adjective===
-'''china'''
+'''china''' (''no [[comparative]] or [[superlative]]'')
 
 #Made of china.
 
 ----
-
 ==Dutch==
 ===Proper noun===
 '''China'''
 
-#China (''the country'').
+#China (''the country'')
 
 ----
-
 ==German==
 ===Proper noun===
 '''China'''
 
-#China (''the country'').
+#China (''the country'')
 
 ----
-
 ==Indonesian==
 ===Proper noun===
 '''China'''
 
-===Alternate spellings===
-*[[Cina]]
+====Variant spellings====
+*[[Cina#Indonesian|Cina]]
 
-#China (''the country'').
+#China (''the country'')
 
 ----
-
-==[[Interlingua]]==
+==Interlingua==
 ===Proper noun===
 '''China'''
 
-#China (''the country'').
+#China (''the country'')
 
 ----
-
 ==Portuguese==
 ===Proper noun===
 '''China''' ''f''
 
-#China (''the country'').
+#China (''the country'')
 
 ----
-
 ==Romanian==
 ===Proper noun===
 '''China''' ''f''
 
-#China (''the country'').
+#China (''the country'')
 
 ----
-
 ==Spanish==
 ===Proper noun===
 '''China'''
 
-#China (''the country'').
+#China (''the country'')
 
 [[Category:English country nouns]]
