fmt <half-inch#38987>

--- a/wiki/half-inch.wikitext
+++ b/wiki/half-inch.wikitext
@@ -1,4 +1,5 @@
 ==English==
 ===Transitive verb===
+'''half-inch''' ('''half-inching''', '''half-inched''', '''half-inched''')
 
-#(''Cockney rhyming slang'') to [[pinch]] (''ie'', to [[steal]]).
+#(''[[Cockney rhyming slang]]'') To [[pinch]] (i.e., to [[steal]]).
