+Cockney rhyming slang sense; moved defs of der terms to separate pages <iron#7932>

--- a/wiki/iron.wikitext
+++ b/wiki/iron.wikitext
@@ -18,10 +18,12 @@ from Latin [[aes]]
 #A [[tool]] or [[appliance]] made of [[metal]], which is [[heat]]ed and then used to [[transfer]] heat to something else; most often a [[thick]] [[piece]] of metal fitted with a [[handle]] and having a [[flat]], roughly [[triangular]] [[bottom]], which is heated and used to [[press]] [[wrinkle]]s from [[clothing]], and now usually containing an [[electrical]] heating [[apparatus]].
 #(''in plural'' '''irons''') [[Shackles]].
 #A shade of the [[colour]]/[[color]] [[silver]].
+#(''[[Cockney rhyming slang]]''; ''shortened from'' '''[[iron hoof]]''', ''rhyming with'' '''[[poof]]''') A male [[homosexual]].
 
 ====Synonyms====
 *(''for pressing clothing''): [[flatiron]](''old-fashioned''), [[smoothing iron]] (''old-fashioned'')
 *(''shackles''): [[legirons]], [[shackles]]
+*(''homosexual''): [[poof]], [[queer]]
 
 ==== Translations ====
 
@@ -252,6 +254,7 @@ from Latin [[aes]]
 *Zinza: [[echooma]]
 |}
 |}
+
 =====External links=====
 For etymology and more information refer to:
 http://elements.vanderkrogt.net/elem/fe.html
@@ -285,6 +288,8 @@ http://elements.vanderkrogt.net/elem/fe.html
 
 '''shade of the colour silver'''
 
+'''homosexual'''
+''See [[poof]]''
 
 =====Translations to be checked=====
 
@@ -399,15 +404,14 @@ The translations below need to be checked by native speakers and inserted into t
 *Swedish: [[stryka]]
 
 ====Derived terms====
+*[[branding iron]]
+*[[curling iron]]
 *[[ironing]]
 *[[ironing board]]
-*[[iron out]] - To [[remove]] (a [[wrinkle]]) with an iron.
-*:''(figuratively:)'' To [[resolve]] (a [[dispute]] or [[problem]]).
-*'''Branding iron:'''  A piece of metal [[bend|bent]] into a [[distinctive]] [[shape]], which is heated and used to [[brand]] [[livestock]].
-*'''Curling iron:'''  A metal [[cylinder]] heated and used to [[curl]] [[hair]], now usually containing an electrical heating apparatus.
-*'''Waffle iron:'''.  A [[pair]] of metal [[plate]]s, usually [[hinge]]d together, having a [[grid]]ded [[surface]] and used for [[bake|baking]] [[waffle]]s.
-*'''Soldering iron:'''.  A metal tool, now usually electrical, having a [[metal]] [[point]], used to heat [[solder]].
-*'''Tire iron:'''  A metal tool used to [[replace]] [[tire]]s on the wheel rim of a [[car]] or other [[vehicle]]
+*[[iron out]]
+*[[soldering iron]]
+*[[tire iron]]
+*[[waffle iron]]
 
 [[Category:Chemical elements]]
 [[pl:iron]]
