--- a/wiki/obfuscation.wikitext
+++ b/wiki/obfuscation.wikitext
@@ -1,6 +1,12 @@
-Obfuscation, noun
-1. confusion resulting from failure to understand
-2. the activity of obscuring people's understanding, leaving them baffled or bewildered
-3. darkening or obscuring the sight of something
-4. in computer programming - the act of altering source code or compiled code to maintain functionality but hide the algorithmic implementation or intended purpose of the code.
--- verb: obfuscate
+'''Obfuscation'''
+
+==[[Noun]]==
+
+# [[confusion]] resulting from [[failure]] to understand
+# the activity of [[obscuring]] people's understanding, leaving them [[baffled]] or [[bewildered]]
+# darkening or obscuring the sight of [[something]]
+# in [[computer]] [[programming]] - the act of [[altering]] [[source]] code or compiled code to maintain [[functionality]] but hide the [[algorithmic]] [[implementation]] or intended purpose of the code.
+
+==[[Verb]]==
+
+[[obfuscate]]
