--- a/wiki/wine.wikitext
+++ b/wiki/wine.wikitext
@@ -33,7 +33,7 @@
 {|
 *Indonesian: [[anggur]], [[minum|minuman]] [[anggur]]
 *Italian: [[vino]] ''m''
-*Japanese: [[ワイン]] (wain)
+*Japanese: [[ワイン]] (wain), [[葡萄酒]] (ぶどうしゅ)
 *[[Persian]]: [[می]] (may)
 *Polish: [[wino]]
 *Romanian: [[vin]] ''n''
@@ -55,7 +55,7 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Japanese: (not rice), [[酒]] ([[さけ]]　[[sake]]) (rice)
+*Japanese: [[酒]] ([[さけ]]　[[sake]])
 *Slovene: [[vino]] ''n''
 *Swedish: [[vin]] ''n''
 |}
