/* Noun */ particularly 3rd, 5th, 7th <blue note#52177>

--- a/wiki/blue_note.wikitext
+++ b/wiki/blue_note.wikitext
@@ -2,4 +2,4 @@
 ===Noun===
 '''[[blue]] [[note]]''' (plural: blue notes)
 
-# (''music'') Notes added to the major scale for expressive quality in [[jazz]] and [[blues]] music.
+# (''music'') Notes added to the major scale for expressive quality in [[jazz]] and [[blues]] music, particularly the flatted third, fifth and seventh.
