/* Noun */ +music sense <turnaround#36571>

--- a/wiki/turnaround.wikitext
+++ b/wiki/turnaround.wikitext
@@ -6,6 +6,7 @@
 #A reversal of [[policy]].
 #The time required to carry out a task.
 #: ''They tried to reduce their turnaround on incoming paperwork.''
+# (''music'') A cadence linking the end of a verse to the beginning of the next.
 
 ====Synonyms====
 [[U-turn]] (1, 2)
