--- a/wiki/wine.wikitext
+++ b/wiki/wine.wikitext
@@ -25,7 +25,7 @@
 *French: [[vin]] ''m''
 *[[Frisian]]: [[wyn]]
 *German: [[Wein]] ''m''
-*Greek: [[οίνος]] ''m''
+*Greek: [[κρασί]] ''n'', [[οίνος]] ''m''
 *Hebrew: [[יין]] ''m''
 |}
 | width=1% |
