--- a/wiki/table.wikitext
+++ b/wiki/table.wikitext
@@ -64,6 +64,8 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 {|
 *Dutch: [[tabel]] ''m''
 *Finnish: [[taulukko]]
+*French: [[tableau#French|tableau]] ''m''
+*German: [[Tabelle]] 
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -91,8 +93,6 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 
 *[[Basque]]: [[mahai]]
 *Bulgarian: [[таблица]] ''f'' (2), [[таблица за умножение]] ''f'' (3)
-*French: table ''f'' (2), [[tableau#French|tableau]] ''m'' (2)
-*German: [[Tisch]] ''f'' (2)
 *Indonesian: [[meja]]
 *Italian: [[tavola]] ''f'' (2), [[tavolo]] ''m'' (1)
 *Latin: [[tabula]] ''f'' (2, 3, 4)
