--- a/wiki/delta.wikitext
+++ b/wiki/delta.wikitext
@@ -9,6 +9,12 @@ Fr. [[Greek|Gk.]] ''delta'', the letter D.
 #The fourth letter of the [[w:Greek alphabet|Greek Alphabet]].
 #The triangular mouth of a large river that empties into a sea or large body of water.
 #'''&#948;''' ''Phonetics.'' In the [[International Phonetic Alphabet|IPA]], the symbol that represents the voiced dental fricative. Usu. represented by the Icelandic [[eth|eth/edh]] (ð).
+# (''mathematics'') A change in some quantity.
+# (''computing, colloquial'') A small but noticeable effect.
+#: ''This will slow the main code path down, but only by delta.''
+
+====See Also====
+*[[epsilon]]
 
 ==== Translations ====
 
