fmt, +math, computing <epsilon#28092>

--- a/wiki/epsilon.wikitext
+++ b/wiki/epsilon.wikitext
@@ -1,10 +1,12 @@
-*Letter of the Greek alphabet: &#917;, &#949;
-**Last: [[delta|&#916;]]
-**Next: [[zeta|&#918;]]
-**:Next in [[w:Old Greek|Old Greek]]: [[digamma|Ϝ]]
+==English==
 
-#The fifth letter of the [[w:Greek alphabet|Greek Alphabet]].
-#'''ε''' ''Phonetics.'' In [[International Phonetic Alphabet|IPA]], the phonetic symbol that represents the front half open unrounded vowel. Represented in [[SAMPA]] as ''E''.
+===Noun===
+
+#The fifth letter of the [[w:Greek alphabet|Greek Alphabet]]: '''ε'''.
+#(''phonetics'') In [[International Phonetic Alphabet|IPA]], the phonetic symbol that represents the front half open unrounded vowel. Represented in [[SAMPA]] as ''E''.
+# (''mathematics'') An arbitrarily small quantity.
+# (''computing, colloquial'') A negligible effect.
+#: ''Yes, we have to convert all the symbol names to upper case at startup, but that's epsilon.''
 
 ==== Translations ====
 *[[Interlingua]]: epsilon (1,2)
