fmt, +see <epsilon#28092>

--- a/wiki/epsilon.wikitext
+++ b/wiki/epsilon.wikitext
@@ -8,6 +8,9 @@
 # (''computing, colloquial'') A negligible effect.
 #: ''Yes, we have to convert all the symbol names to upper case at startup, but that's epsilon.''
 
-==== Translations ====
+===See Also===
+*[[delta]]
+
+===Translations===
 *[[Interlingua]]: epsilon (1,2)
 *[[Portuguese]]: [[épsilon]] ''m'' (1,2)
