--- a/wiki/obfuscation.wikitext
+++ b/wiki/obfuscation.wikitext
@@ -1,12 +1,10 @@
-'''Obfuscation'''
+==English==
 
-==[[Noun]]==
+===Noun===
+'''obfuscation'''
 
-# [[confusion]] resulting from [[failure]] to understand
-# the activity of [[obscuring]] people's understanding, leaving them [[baffled]] or [[bewildered]]
-# darkening or obscuring the sight of [[something]]
-# in [[computer]] [[programming]] - the act of [[altering]] [[source]] code or compiled code to maintain [[functionality]] but hide the [[algorithmic]] [[implementation]] or intended purpose of the code.
+# The act, process or result of [[obfuscate|obfuscating]].
+# (''computing'') The alteration of code to hide its structure and intended purpose.
 
-==[[Verb]]==
-
-[[obfuscate]]
+===Related Terms===
+*[[obfuscate]]
