--- a/wiki/obfuscate.wikitext
+++ b/wiki/obfuscate.wikitext
@@ -1,18 +1,22 @@
-'''Obfuscate''' /'Abfjuskeit/
+==English==
 
-==[[Verb]]==
+===Verb===
 
-# To [[deliberately]] make [[something]] more [[confusing]], to [[attempt]] to [[conceal]] the [[truth]], to [[obscure]], to make [[unclear]]. See [[confuse]]
+# To deliberately make more confusing in order to conceal the truth.
+# (''computing'') To alter code while preserving its behavior but conceal its structure and intent.
+#: ''We need to obfuscate these classes before we ship the final release.''
 
-# Idiomatic: to [[obfusticate]]
+===Related Terms===
+*[[obfuscation]]
+*[[obfuscatory]]
 
-===Translations===
-*Portuguese: [[ofuscar]]
-
-===[[Synonym]]s===
+===Synonyms===
 *[[confuse]]
 *[[muddle]]
 
-===[[Antonym]]s===
+===Antonyms===
 *[[explain]]
 *[[simplify]]
+
+===Translations===
+*Portuguese: [[ofuscar]]
