/* Noun */ Computing (previous definition was redundant) <obfuscation#57519>

--- a/wiki/obfuscation.wikitext
+++ b/wiki/obfuscation.wikitext
@@ -4,7 +4,8 @@
 '''obfuscation'''
 
 # The act, process or result of [[obfuscate|obfuscating]].
-# (''computing'') The alteration of code to hide its structure and intended purpose.
+# (''computing'') A facility or option causing obfuscation.
+#: ''You need to turn on obfuscation for these classes.''
 
 ===Related Terms===
 *[[obfuscate]]
