cymbal (from a look at the Zildjian offering).  Name probably derived form the resemblance to a hat worn in China. <China#2319>

--- a/wiki/China.wikitext
+++ b/wiki/China.wikitext
@@ -60,7 +60,7 @@
 #(''uncountable'') [[Tableware]] made from china.
 #(''[[Cockney rhyming slang]]''; ''shortened from'' '''china plate'''; ''countable'')) [[Mate]] (i.e., friend).
 #:''All right, me old china?''
-#(''countable'') A type of cymbal used in a drum kit, about 16 to 20 inches across, having a "trashy", swishy sound, and that is ridden or crashed.
+#(''countable'') A [[cymbal]], flattened at the perimeter, about 16 to 20 inches (40 to 50 cm) across, that is ridden or crashed to produce a distinctive "trashy" sound.
 
 ====Derived terms====
 *[[bone china]]
