--- a/wiki/tardy.wikitext
+++ b/wiki/tardy.wikitext
@@ -1,5 +1,4 @@
-
-'''Meaning: Late''' == ==
+'''Meaning: Late'''
 
 
 There is a suggestion of habitual lateness about the use of the word tardy. More common in British English; verging on being an archaism.
