--- a/wiki/burden.wikitext
+++ b/wiki/burden.wikitext
@@ -10,6 +10,7 @@
 ===Translations===
 *[[Finnish]]: [[kuorma]] (2), [[vastuu]] (3) 
 *[[Russian]]: [[:ru:ноша|ноша]] /nosha/, [[:ru:бремя|бремя]] /bremya/
+*[[Portuguese]]: [[carga]] (2)
 
 ==Transitive verb==
 
