--- a/wiki/penis.wikitext
+++ b/wiki/penis.wikitext
@@ -21,6 +21,7 @@ From Latin '''penis''', ''[[tail]]'' or ''penis''
 *[[dork]] (''slang'')
 *[[fire hose]] (''slang'')
 *[[hose]] (''slang'')
+*[[Jimmy]] (''slang'')
 *[[John Thomas]] (''dated'') <!-- Or is it still used outside Lady Chatterley's Lover? -->
 *[[joystick]] (''slang'')
 *[[knob]] (''slang'')
