--- a/wiki/donkey.wikitext
+++ b/wiki/donkey.wikitext
@@ -54,7 +54,7 @@
 *Romanian: [[măgar]]
 *Romansh: [[asen]]
 *Romany: [[magari]] ''m'', [[magarka]] ''f''
-*Russian: [[осел]] ([[osel]]) '' ''
+*Russian: [[осёл]] ([[osel]]) '' ''
 *Sami: [[áse]], [[ásen]]
 *Sardinian: [[burriccu]], [[molenti]], [[molingianu]], [[àinu]]
 *Scottish: [[asal]]
