--- a/wiki/abbess.wikitext
+++ b/wiki/abbess.wikitext
@@ -4,6 +4,7 @@ Old French ''abaesse'', ''abeesse'', French ''abbesse'', Latin ''abbatissa'', fe
 #A female superior or [[governess]] of a [[nunnery]], or [[convent]] of nuns, having the same authority over the nuns which the [[abbots]] have over the monks. See [[Abbey]].
 #:'''Example'''
 #:*The ''abbess'' was always after the nuns to keep the convent immaculately clean.
+#A [[bawd]], the [[mistress]] of a [[brothel]]. (1811 ''Dictionary of the Vulgar Tongue'')
 
 === Translations ===
 *[[Breton]]: [[abadez]] ''f'' -ed ''pl''
