--- a/wiki/Chris.wikitext
+++ b/wiki/Chris.wikitext
@@ -1,1 +1,6 @@
-definition: stupidhead
+==English==
+===Proper noun===
+'''Chris''' (''plural'' '''Chrises''')
+
+#A short form of the male [[given name]] [[Christopher]].
+#A short form of the female given name [[Christine]].
