+var, syns <womanizer#64695>

--- a/wiki/womanizer.wikitext
+++ b/wiki/womanizer.wikitext
@@ -1,6 +1,11 @@
 ==English==
-
 ===Noun===
-'''womanizer'''
+'''womanizer''' (''plural'' '''womanizers''')
 
-# A serial seducer of women.
+====Variant spellings====
+'''womaniser''' (''British'')
+
+#A serial [[seducer]] of women.
+
+====Synonyms====
+*[[Lothario]], [[player]], [[Romeo]]
