--- a/wiki/frequency_assignment.wikitext
+++ b/wiki/frequency_assignment.wikitext
@@ -1,9 +1,10 @@
 In [[telecommunication]], the term '''frequency assignment''' has the following meanings: 
 
-'''1.'''  [[Authorization]], given by an Administration, for a [[radio station]] to use a [[radio frequency]] or radio frequency [[channel]] under specified conditions 
-
-'''2.'''  The process of authorizing a specific frequency, group of frequencies, or frequency [[band (radio)|band]] to be used at a certain location under specified conditions, such as [[bandwidth]], [[Power (physics)|power]], [[azimuth]], [[duty cycle]], or [[modulation]].  ''Synonym'' '''radio frequency channel assignment.''' ''See'' '''[[administration]] (def. #1).'''
+#[[Authorization]], given by an Administration, for a [[radio station]] to use a [[radio frequency]] or radio frequency [[channel]] under specified conditions. <p>
+#The process of authorizing a specific frequency, group of frequencies, or frequency [[band (radio)|band]] to be used at a certain location under specified conditions, such as [[bandwidth]], [[Power (physics)|power]], [[azimuth]], [[duty cycle]], or [[modulation]].  ''Synonym'' '''radio frequency channel assignment.''' ''See'' '''[[administration]] (def. #1).'''
 
 Source: from [[Federal Standard 1037C]] and from [[MIL-STD-188]]
 
 ''See also:'' [[Federal Communications Commission|FCC]], [[open spectrum]]
+
+[[category: wireless communications]]
