--- a/wiki/aris.wikitext
+++ b/wiki/aris.wikitext
@@ -6,3 +6,6 @@ Shortened from '''[[w:Aristotle|Aristotle]]''', Cockney rhyming slang for '''[[b
 '''aris'''
 
 #(''[[Cockney rhyming slang]]'') [[Arse]].
+
+====Synonyms====
+*[[khyber]] (''Cockney rhyming slang'')
