--- a/wiki/womanizer.wikitext
+++ b/wiki/womanizer.wikitext
@@ -1,11 +1,1 @@
-==English==
-===Noun===
-'''womanizer''' (''plural'' '''womanizers''')
-
-====Variant spellings====
-'''womaniser''' (''British'')
-
-#A serial [[seducer]] of women.
-
-====Synonyms====
-*[[Lothario]], [[player]], [[Romeo]]
+#REDIRECT [[womaniser womanizer]]
