--- a/wiki/womaniser.wikitext
+++ b/wiki/womaniser.wikitext
@@ -1,5 +1,1 @@
-==English==
-===Noun===
-'''womaniser''' (''plural'' '''womaniser''')
-
-#(''British'') Variant spelling of '''[[womanizer]]'''.
+#REDIRECT [[womaniser womanizer]]
