+"slang" labels <nelly#64734>

--- a/wiki/nelly.wikitext
+++ b/wiki/nelly.wikitext
@@ -21,7 +21,7 @@ Shortened from ''Nelly Duff'', for ''puff'', supposedly meaning ''[[life]]''
 ===Noun===
 '''nelly''' (''plural'' '''nellies''')
 
-#(''derogatory'') An [[effeminate]] homosexual man.
+#(''derogatory slang'') An [[effeminate]] homosexual man.
 
 ===Etymology===
 From the noun meaning a homosexual man.
@@ -29,4 +29,4 @@ From the noun meaning a homosexual man.
 ===Adjective===
 '''nelly''' (''[[comparative]]'' '''nellier''', ''[[superlative]]'' '''nelliest''')
 
-#[[Unmanly]], effeminate.
+#(''slang'') [[Unmanly]], effeminate.
