--- a/wiki/Icelandic.wikitext
+++ b/wiki/Icelandic.wikitext
@@ -2,6 +2,7 @@
 #A Scandinavian language which is the national tongue of [[Iceland]].
 #:'''Translations'''
 #:*{{chr}}: [[ᎢᏍᎳᏅᏗ]]
+#:*{{zh}}: [[冰島語]]
 #:*{{nl}}: [[Ĳslands]]/[[IJslands]] {{n}}
 #:*{{fi}}: [[islanti]]
 #:*{{is}}: [[íslenska]]
