--- a/wiki/porky.wikitext
+++ b/wiki/porky.wikitext
@@ -10,4 +10,4 @@
 ===Noun===
 '''porky''' (''plural'' '''porkies''')
 
-#(''[[Cockney rhyming slang]]''; ''shortened from'' '''[[pork pie]]]''') A [[lie]].
+#(''[[Cockney rhyming slang]]''; ''shortened from'' '''[[pork pie]]''') A [[lie]].
