--- a/wiki/viper.wikitext
+++ b/wiki/viper.wikitext
@@ -18,5 +18,6 @@
 *Lithuanian: [[angis]] ''f''
 *{{pl}}: [[żmija]] ''f''
 *Slovene: [[gad]] ''m''
+*Swedish: [[huggorm]] 'en'
 
 [[Category:English reptiles]]
