--- a/wiki/Ruby_Murray.wikitext
+++ b/wiki/Ruby_Murray.wikitext
@@ -2,5 +2,5 @@
 ===Noun===
 '''Ruby Murray''' (''plural'' '''Ruby Murrays''')
 
-#(''[[Cockney rhyming slang]]'') A meal of [[curry]].
+#(''[[Cockney rhyming slang]]'') A (meal of) [[curry]].
 #:''We're going down the Indian for Ruby Murray - wanna join us?''
