fmt; is there also a sense that has something to do with (American) football? <tater#54301>

--- a/wiki/tater.wikitext
+++ b/wiki/tater.wikitext
@@ -1,7 +1,16 @@
-===Noun===
-'''tater''', plural '''[[taters]]'''
-
-# ''(colloquial)'' [[potato]]
-
+==English==
 ====Etymology====
-From '''[[potato]]'''
+Representing an [[aphetic]] [[Cockney]] pronunciation of '''[[potato]]'''
+
+===Noun===
+'''tater''' (''plural'' '''[[taters]]''')
+
+#(''slang'') A [[potato]].
+
+===Derived terms===
+*[[taters]]<!--adjective-->
+
+===Noun===
+'''tater''' (''plural'' '''[[taters]]''')
+
+<!--something to do with (American) football?-->
