--- a/wiki/tater.wikitext
+++ b/wiki/tater.wikitext
@@ -5,7 +5,7 @@ Representing an [[aphetic]] [[Cockney]] pronunciation of '''[[potato]]'''
 ===Noun===
 '''tater''' (''plural'' '''[[taters]]''')
 
-#(''slang'') A [[potato]].
+#(''British slang'') A [[potato]].
 
 ===Derived terms===
 *[[taters]]<!--adjective-->
