<Cockney rhyming slang#64673>

--- a/wiki/Cockney_rhyming_slang.wikitext
+++ b/wiki/Cockney_rhyming_slang.wikitext
@@ -7,7 +7,7 @@
 ===Examples of Cockney rhyming slang in common use===
 
 <!--Note: if you add to this list, please ensure your contributions are WELL-KNOWN and WELL-ESTABLISHED, as some coinages fall out of fashion very quickly, and the list is not intended to be comprehensive.-->
-''The following is a list of well-known (to Londoners) examples of Cockney rhyming slang.  It is not intended to be comprehensive - for a much fuller list, see the external link below.''
+''The following is a list of well-known (to Londoners) examples of Cockney rhyming slang.  It is not intended to be comprehensive &mdash; for a much fuller list, see the external link below.''
 
 ''Many terms are based on popular culture, and so the cant is constantly updated according to changing fashions.  The terms listed here are well-established.''
 
