--- a/wiki/flatbed.wikitext
+++ b/wiki/flatbed.wikitext
@@ -1,3 +1,5 @@
 A type of optical [[w:scanner (computing)|scanner]] that consists of a [[flat]] surface on which you lay documents to be scanned. Flatbed scanners are particularly effective for bound documents.
 
+The term is used too for a horizontal [[w:computer case|computer case]] (flatbed case).
+
 See also: [[w:multifunctional|multifunctional scanner]].
