modified etym <algorithm#64258>

--- a/wiki/algorithm.wikitext
+++ b/wiki/algorithm.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-A [[corruption]] of the name of the Arab mathematician [[w:al-Khwarizmi|al-Khwarizmi]]
+From Old French ''algorisme''; ultimately a modification from the name of the Arab mathematician [[w:al-Khwarizmi|al-Khwarizmi]]
 
 ===Noun===
 '''algorithm''' (''plural'' '''algorithms''')
