--- a/wiki/algorithm.wikitext
+++ b/wiki/algorithm.wikitext
@@ -8,9 +8,8 @@ From Old French ''algorisme''; ultimately a modification from the name of the Ar
 #A well-defined procedure describing how to carry out a particular task, independent of any computing system that might do that task.
 #:''There are several well-known algorithms for multiplying numbers, including the method most of us learned in primary school.''
 
-====Usage Note====
-
-Though some technical definitions require that an algorithm always terminate in a finite number of steps, this distinction is not generally observed in practice.
+====Usage notes====
+*Though some technical definitions require that an algorithm always terminate in a finite number of steps, this distinction is not generally observed in practice.
 
 ====Translations====
 {| border=0 width=100%
