/* Noun */ Don't know about football, but "tater" is more folksy than slang in the US (must be all the Irish stock :-) <tater#54301>

--- a/wiki/tater.wikitext
+++ b/wiki/tater.wikitext
@@ -5,7 +5,7 @@ Representing an [[aphetic]] [[Cockney]] pronunciation of '''[[potato]]'''
 ===Noun===
 '''tater''' (''plural'' '''[[taters]]''')
 
-#(''British slang'') A [[potato]].
+#(''British slang, US colloquial'') A [[potato]].
 
 ===Derived terms===
 *[[taters]]<!--adjective-->
