/* Derived terms */ +der <tater#54301>

--- a/wiki/tater.wikitext
+++ b/wiki/tater.wikitext
@@ -9,6 +9,7 @@ Representing an [[aphetic]] [[Cockney]] pronunciation of '''[[potato]]'''
 
 ===Derived terms===
 *[[taters]]<!--adjective-->
+*[[tater tot]]
 
 ===Noun===
 '''tater''' (''plural'' '''[[taters]]''')
