added -ɪ- pronunciations <penis#8155>

--- a/wiki/penis.wikitext
+++ b/wiki/penis.wikitext
@@ -2,6 +2,7 @@
 From Latin '''penis''', ''[[tail]]'' or ''penis''
 
 ===Pronunciation===
+*pē'nis, /ˈpiːnɪs/, /"pi:nIs/
 *pē'nəs, /ˈpiːnəs/, /"pi:n@s/
 
 ===Noun===
