--- a/wiki/beach.wikitext
+++ b/wiki/beach.wikitext
@@ -53,6 +53,7 @@
 '''run something aground on a beach'''
 {| border=0  width=100%
 |-
+*[[Dutch]]: [[Stranden]]
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 |}
