--- a/wiki/babble.wikitext
+++ b/wiki/babble.wikitext
@@ -3,6 +3,13 @@
 ===Etymology===
 [[Cf]]. Late German ''babbeln''; D. babbelen; German ''bappeln'', ''bappern''; French ''babiller''; Italian ''babbolare''; probable origin, to keep saying ''ba'', imitative of a child learning to talk.
 
+===Noun===
+#[[Idle]] talk; [[senseless]] [[prattle]]; [[gabble]]; [[twaddle]]. "This is mere moral '''babble'''." [[Milton]].
+#[[Inarticulate]] [[speech]]; constant or confused [[murmur]].
+#:'''Quotations'''
+#:*The '''babble''' of our young children. - [[Darwin]].
+#:*The '''babble''' of the stream. - [[Tennyson]].
+
 ===Intransitive Verb===
 *imperfect & past participle: Babbled
 *present participle & verbal noun: Babbling
@@ -14,3 +21,8 @@
 #:*In every '''babbling''' brook he finds a friend. - [[Wordsworth]].
 
 Hounds are said to babble, or to be babbling, when they are too noisy after having found a good scent.
+
+===Transitive Verb===
+#To utter in an indistinct or incoherent way; to repeat, as words, in a childish way without understanding.
+#:*These words he used to '''babble''' in all companies. - [[Arbuthnot]].
+#To disclose by too free talk, as a secret.
