--- a/wiki/babble.wikitext
+++ b/wiki/babble.wikitext
@@ -10,6 +10,10 @@
 #:*The '''babble''' of our young children. - [[Darwin]].
 #:*The '''babble''' of the stream. - [[Tennyson]].
 
+====Also====
+*Babblement ([[Hawthorne]])
+*Babblery ([[Sir Thomas More]])
+
 ===Intransitive Verb===
 *imperfect & past participle: Babbled
 *present participle & verbal noun: Babbling
