Expanded with 1913 Webster <Babel#59986>

--- a/wiki/Babel.wikitext
+++ b/wiki/Babel.wikitext
@@ -1,7 +1,16 @@
 ==English==
 
+===Etymology===
+Hebrew ''Babel'', the name of the capital of [[Babylonia]]; in [[Genesis]] associated with the idea of "[[confusion]]."]
+
 ===Noun===
 
-'''babel'''
+#The city and tower in the land of [[Shinar]], where the [[confusion]] of [[language]]s took place.
+#:*Therefore is the name of it called '''Babel'''. - ''Gen. xi. 9.''
+#Hence: A place or scene of noise and confusion; a confused mixture of sounds, as of voices or languages.
+#:'''Quotations'''
+#:*That '''babel''' of strange heathen languages. - [[Hammond]].
+#:*The grinding '''babel''' of the street - [[R. L. Stevenson]].
 
-#The city and tower in the land of Shinar, where the confusion of languages took place.
+===Related Terms===
+*[[Babble]]
