--- a/wiki/babu.wikitext
+++ b/wiki/babu.wikitext
@@ -1,3 +1,11 @@
+==English==
+
+===Etymology===
+Hind. ''babu''. 
+
+===Noun===
+# A [[Hindoo]] [[gentleman]]; a native [[clerk]] who writes [[English]]; also, a Hindoo title answering to [[Mr]]. or [[Esquire]]. ''[[Whitworth]]''.
+
 == [[Indonesian]] ==
 
 # [[house-maid]]
