added 1913 Webster <baboon#37282>

--- a/wiki/baboon.wikitext
+++ b/wiki/baboon.wikitext
@@ -1,7 +1,14 @@
+==English==
+
+===Etymology===
+Old English ''babewin'', ''baboin''; from French ''babouin'', or Late Latin ''babewynus''. Of unknown origin; [[cf.]] Dutch ''baviaan'', German ''pavian'', baboon, French ''babine'' lip of ape, dogs, etc., dial. German ''bäppe'' mouth.
+
+
 ===Noun===
 '''baboon'''
 
 #an African [[primate]].
+#(''[[Zoological]]'') One of the Old World [[Quadrumana]], of the genera [[Cynocephalus]] and [[Papio]]; the [[dog]]-faced [[ape]]. Baboons have dog-like [[muzzle]]s and large [[canine]] teeth, cheek pouches, a short tail, and naked [[callosities]] on the [[buttocks]]. They are mostly African. See [[Mandrill]], and [[Chacma]], and [[Drill]].
 
 ====Translations====
 *Dutch: [[baviaan]] ''m''
