--- a/wiki/hector.wikitext
+++ b/wiki/hector.wikitext
@@ -1,7 +1,10 @@
 ==English==
 
-===Noun===
+
 
 '''hector'''
 
-#A bully; a blustering, turbulent, insolent, fellow; one who vexes or provokes.
+v.tr.
+To intimidate or dominate in a blustering way.
+v.intr.
+To behave like a bully; swagger.
