--- a/wiki/Bacchanalian.wikitext
+++ b/wiki/Bacchanalian.wikitext
@@ -3,3 +3,6 @@
 ===Adjective===
 #Of or pertaining to the [[festival]] of [[Bacchus]]; relating to or given to [[revel]]ing and [[drunkenness]].
 #:*Even '''bacchanalian''' madness has its charms. ''[[Cowper]]''.
+
+===Noun===
+#A [[bacchanal]]; a [[drunken]] [[reveler]].
