--- a/wiki/addle.wikitext
+++ b/wiki/addle.wikitext
@@ -1,7 +1,24 @@
 ==English==
 
+===Etymology===
+Old English ''adlen'', ''adilen'', to gain, acquire; probably from Icelandic ''öðlask'' to acquire property, akin to ''oðal'' property. [[Cf.]] [[Allodial]].
+
+
+===Adjective===
+#Having lost the power of development, and become [[rotten]], as eggs; [[putrid]]. Hence: [[Unfruitful]] or [[confused]], as brains; [[muddled]]. ''[[Dryden]]''.
+
+
 ===Noun===
 
-'''addle'''
+#(''[[Obsolete]]'') Liquid [[filth]]; [[mire]].
+#(''[[Provincial]]'') [[Lees]]; [[dregs]]. ''[[Wright]]''.
 
-#Liquid filth; mire.
+
+===Verb Transitive and Intransitive===
+*[[imp.]] and [[p. p.]]: Addled
+*[[p. pr.]] and [[vb. n.]]: Addling
+
+#To make addle; to grow addle; to [[muddle]]; as, he '''addled''' his brain. "Their eggs were '''addled'''." Cowper.
+#(''[[Provincial]]'') To earn by labor. ''[[Forby]]''.
+#(''[[Provincial]]'') To thrive or grow; to ripen.
+#:*Kill ivy, else tree will addle no more. - ''[[Tusser]]''.
