--- a/wiki/addle.wikitext
+++ b/wiki/addle.wikitext
@@ -22,3 +22,7 @@ Old English ''adlen'', ''adilen'', to gain, acquire; probably from Icelandic ''Ã
 #(''[[Provincial]]'') To earn by labor. ''[[Forby]]''.
 #(''[[Provincial]]'') To thrive or grow; to ripen.
 #:*Kill ivy, else tree will addle no more. - ''[[Tusser]]''.
+
+
+----
+{{webster}}
