--- a/wiki/address.wikitext
+++ b/wiki/address.wikitext
@@ -1,8 +1,70 @@
-== English ==
-=== Noun ===
-'''address''' (Plural: [[addresses]])
+==English==
 
-====Translations====
+===Etymology===
+Old English ''adressen'' to raise erect, adorn, Old French ''adrecier'', to straighten, address, French ''adresser'', from ''à'' (Latin ''ad'') + Old French ''drecier'', French ''dresser'', to straighten, arrange. See [[Dress]].
+
+=== Noun ===
+Plural: addresses
+
+#(''[[Obsolete]]'') Act of preparing one's self. ''[[Jer Taylor]]''.
+#Act of addressing one's self to a person; verbal application.
+#A formal communication, either written or spoken; a discourse; a speech; a formal application to any one; a petition; a formal statement on some subject or special occasion; as, an address of thanks, an address to the voters.
+#Direction or superscription of a letter, or the name, title, and place of residence of the person addressed.
+#Manner of speaking to another; delivery; as, a man of pleasing or insinuating address.
+#Attention in the way one's addresses to a lady. Addison.
+#Skill; skillful management; dexterity; adroitness.
+
+====Synonyms====
+*[[Speech]]
+*[[Discourse]]
+*[[Harangue]]
+*[[Oration]]
+*[[Petition]]
+*[[Lecture]]
+*[[Readiness]]
+*[[Ingenuity]]
+*[[Tact]]
+*[[Adroitness]]
+
+===Intransitive Verb===
+#(''[[Obsolete]]'') To prepare one's self. "Let us address to tend on Hector's heels." ''[[Shakespeare]]''.
+#(''[[Obsolete]]'') To direct speech.
+#:*Young Turnus to the beauteous maid addrest. - ''[[Dryden]]''.
+
+The intransitive uses come from the dropping out of the reflexive pronoun.
+
+
+===Transitive Verb===
+*[[imp.]] & [[p. p.]]: Addressed
+*[[p. pr.]] & [[vb. n.]]: Addressing
+
+#(''[[Obsolete]]'') To aim; to direct. ''[[Chaucer]]''.
+#:*And this good knight his way with me '''addrest'''. - ''[[Spenser]]''.
+#(''[[Obsolete]]'') To prepare or make ready.
+#:*His foe was soon addressed. - ''[[Spenser]]''.
+#:*Turnus addressed his men to single fight. - ''[[Dryden]]''.
+#:*The five foolish virgins addressed themselves at the noise of the bridegroom's coming. - ''[[Jeremy Taylor]]''.
+#Reflexively: To prepare one's self; to apply one's skill or energies (to some object); to betake.
+#:*These men addressed themselves to the task. - ''[[Macaulay]]''.
+#(''[[Archaic]]'') To clothe or array; to dress.
+#:*Tecla ... addressed herself in man's apparel. - ''[[Jewel]]''.
+#To direct, as words (to any one or any thing); to make, as a speech, petition, etc. (to any one, an audience).
+#:*The young hero had addressed his players to him for his assistance. - ''[[Dryden]]''.
+#To direct speech to; to make a communication to, whether spoken or written; to apply to by words, as by a speech, petition, etc., to speak to; to accost.
+#:*Are not your orders to address the senate? - ''[[Addison]]''.
+#:*The representatives of the nation addressed the king. - ''[[Swift]]''.
+#To direct in writing, as a letter; to superscribe, or to direct and transmit; as, he addressed a letter.
+#To make suit to as a lover; to court; to woo.
+#To consign or intrust to the care of another, as agent or factor; as, the ship was addressed to a merchant in Baltimore.
+#To address one's self to. (
+##To prepare one's self for; to apply one's self to.
+##To direct one's speech or discourse to.
+
+
+
+==Translations==
+
+===Noun===
 *[[Basque]]: [[helbide]]
 *[[Chinese]]: [[地址]] 
 *Dutch: [[adres]] ''n''
@@ -11,3 +73,6 @@
 *German: [[Adresse]] ''f''
 *[[Romanica]]: [[adresse]] ''f''
 *Spanish: [[dirección]] ''f''
+
+----
+{{webster}}
