--- a/wiki/orthogonal.wikitext
+++ b/wiki/orthogonal.wikitext
@@ -1,6 +1,19 @@
 ==English==
+
 ===Adjective===
 '''orthogonal'''
 
-# [[Perpendicular]] to.
-# Statistically independent.
+# (''geometry'') [[Perpendicular]] to.
+#: ''A chord is orthogonal to the radius which bisects it.'
+# (''mathematics'') Linearly independent.  Having a zero [[inner product]].
+#: ''A normal vector is orthogonal to the tangent vector at the same point.''
+# (''statistics'') Statistically independent.
+# (''software engineering'') Able to be treated separately.
+#: ''The content of the message should be orthogonal to the way the message is sent.''
+
+===Relted Terms===
+*[[ortho]] <!-- Which will bring in things like orthodox, orthotic, orthodontist . . . -->
+*[[orthogonal base]]
+*[[orthogonal matrix]]
+*[[orthogonal transform]]
+*[[orthonormal]]
