More appropriate examples, not on "orthogonal to" <orthogonal#59518>

--- a/wiki/orthogonal.wikitext
+++ b/wiki/orthogonal.wikitext
@@ -4,12 +4,15 @@
 '''orthogonal'''
 
 # (''geometry'') [[Perpendicular]] to.
-#: ''A chord is orthogonal to the radius which bisects it.'
+#: ''A chord and the radius that bisects it are orthogonal.'
 # (''mathematics'') Linearly independent.  Having a zero [[inner product]].
-#: ''A normal vector is orthogonal to the tangent vector at the same point.''
+#: ''The normal vector and tangent vector at a given point are orthogonal.''
 # (''statistics'') Statistically independent.
 # (''software engineering'') Able to be treated separately.
-#: ''The content of the message should be orthogonal to the way the message is sent.''
+#: ''The content of the message and the means of its delivery should be orthogonal.''
+
+===Usage Note===
+In any of its senses, ''orthogonal'' may be used with ''to'', as in ''A chord is orthogonal to the radius that bisects it.''
 
 ===Relted Terms===
 *[[ortho]] <!-- Which will bring in things like orthodox, orthotic, orthodontist . . . -->
