--- a/wiki/adenitis.wikitext
+++ b/wiki/adenitis.wikitext
@@ -1,6 +1,11 @@
-----
+==English==
 
-==[[Romanica]]==
+===Etymology===
+[[Aden]] + [[itis]].
+
 ===Noun===
-<b>adenitis</b>
-#[Pathol.] [[adenitis]]
+#(''[[Medicine]]'') [[Glandular]] [[inflammation]]. ''[[Dunglison]]''
+
+
+----
+{{webster}}
