--- a/wiki/addendum.wikitext
+++ b/wiki/addendum.wikitext
@@ -1,6 +1,13 @@
-----
+==English==
 
-==[[Romanica]]==
+===Etymology===
+Latin, from ''addere'' to add.
+
 ===Noun===
-<b>[[addendum]], [[addenda]] ''pl'' [NeoLatino]==
-#[[addendum]]
+Plural: [[Addenda]]
+
+#A thing to be [[add]]ed; an [[appendix]] or [[addition]].
+
+
+----
+{{webster}}
