--- a/wiki/sex.wikitext
+++ b/wiki/sex.wikitext
@@ -14,17 +14,18 @@
 *Turkish: [[seks]] ''m'' (1); [[sevişme]] ''m'' (2)
 *Bulgarian: [[пол]] ''m'' (1); [[секс]] ''m'' (2)
 *Finnish: [[sukupuoli]] (1); [[seksi]] (2)
-*German: [[Geschlecht]] ''n'' (1), Sex ''m'' (2,3)
-*Hebrew: [[מין]] (Min) (1,3), [[זן]] (Zan) (1), [[יחסי מין]] (Ya'kha'sey Min) (2), [[סקס]] (Sex) (3 - Slang, not formal)
+*German: [[Geschlecht]] ''n'' (1), Sex ''m'' (2, 3)
+*Hebrew: [[מין]] (Min) (1, 3), [[זן]] (Zan) (1), [[יחסי מין]] (Ya'kha'sey Min) (2), [[סקס]] (Sex) (3 - Slang, not formal)
 *Indonesian: [[seks]] (2), [[jenis]] [[kelamin]] (1)
 *{{ga}}: [[gneas]]
-*Norwegian: [[kjønn]] (1), sex (2,3)
-*Polish: [[płeć]] ''f'' (1); [[seks]] ''m'' (2,3)
+*Norwegian: [[kjønn]] (1), sex (2, 3)
+*Polish: [[płeć]] ''f'' (1); [[seks]] ''m'' (2, 3)
 *Portuguese: [[sexo]]
 *Russian: [[пол]] ''m'' (1); [[секс]] ''m'' (2)
 *Slovak: [[pohlavie]] (1); [[sex#Slovak|sex]] (2, 3)
 *Spanish [[sexo]] ''m'' (1), (3); [[relaciones sexuales]] ''f pl.'' (2)
-*Swedish: [[kön]] (1), sex (2,3)
+*Swedish: [[kön]] (1), sex (2, 3)
+*French: [[sexe]] (1, 2)
 
 ===Adjective===
 '''sex'''
