--- a/wiki/country.wikitext
+++ b/wiki/country.wikitext
@@ -18,7 +18,7 @@ Middle English [[contree]], [[contre]], borrowed from Old French [[contrée]], f
 *Finnish: [[maa]], [[valtio]] (1), [[maaseutu]] (3)
 *French: [[pays]] ''m'' (1), [[campagne]] ''f'' (2)
 *Frisian: [[lân]] ''n'' (1)
-*German: [[Land]] ''n'' (1,2), [[Staat]] ''m'' (1), [[Nation]] ''f'' (1), [[Landschaft]] ''f'' (2)
+*German: [[Land]] ''n'' (1,2,3), [[Staat]] ''m'' (1), [[Vaterland]] ''s'' (1), [[Landschaft]] ''f'' (2) [[Region]] ''f'' (2)
 *Greek, Modern: [[χώρα]] (khora, 1), [[ύπαιθρως]] ''f'' (ipethros, 2)
 *Hebrew: (1) [[ארץ]]
 *Hungarian: [[ország]] (1)
