--- a/wiki/%E0%A4%AF%E0%A4%A6%E0%A4%BF.wikitext
+++ b/wiki/%E0%A4%AF%E0%A4%A6%E0%A4%BF.wikitext
@@ -3,4 +3,4 @@
 
 यदि
 # if
-''यदि [[अहम्|अहं]] तस्याः [[गृह|गृहं]] [[गम्|गच्छेयम्]], तर्हि अहं [[तुष्|तुष्येयम्]]।''
+''यदि [[अहम्|अहं]] तस्याः [[गृह|गृहं]] [[गम्|गच्छेयम्]], [[तर्हि]] अहं [[तुष्|तुष्येयम्]]।''
