--- a/wiki/ugly.wikitext
+++ b/wiki/ugly.wikitext
@@ -11,7 +11,7 @@
 *[[ugly duckling]]
 
 ====Translations====
-*Chinese: [[難看]], [[难看]]
+*Chineese: [[難看]], [[难看]]
 *Dutch: [[lelijk]], [[lelijke]]
 *Finnish: [[ruma#Finnish|ruma]] (1, 2), [[epäesteettinen]] (2)
 *French: [[laid]] ''m'', [[laide]] ''f''
