--- a/wiki/ugly.wikitext
+++ b/wiki/ugly.wikitext
@@ -8,7 +8,7 @@
 *[[beautiful]], [[pleasing]]
 
 ====Related terms====
-*[[ugly duckling]]
+*[[ugly frog duckling]]
 
 ====Translations====
 *Chineese: [[難看]], [[难看]]
