--- a/wiki/stupid.wikitext
+++ b/wiki/stupid.wikitext
@@ -5,7 +5,7 @@
 
 1. Lacking intelligence
 
-2. Intelligence equivalent to George W. Bush
+2. Intelligence exceding George W. Bush's intelegence
 ====Derived terms====
 *[[stupidity]]
 *[[stupidly]]
