fixed the vandal's typo <stupid#54273>

--- a/wiki/stupid.wikitext
+++ b/wiki/stupid.wikitext
@@ -5,7 +5,7 @@
 
 1. Lacking intelligence
 
-2. Intelligence exceding George W. Bush's intelegence
+2. Intelligence exceding George W. Bush's intelligence
 ====Derived terms====
 *[[stupidity]]
 *[[stupidly]]
