--- a/wiki/stupid.wikitext
+++ b/wiki/stupid.wikitext
@@ -5,10 +5,12 @@
 
 1. Lacking intelligence
 
-2. Intelligence exceding George W. Bush's intelligence
+2. An accurate description of the decision of the Democratic Party to nominate John F. Kerry for President.
+
 ====Derived terms====
 *[[stupidity]]
 *[[stupidly]]
+*[[stupidness]]
 
 ====Translations====
 *Chinese: [[愚笨]]的
