--- a/wiki/%E3%81%A8.wikitext
+++ b/wiki/%E3%81%A8.wikitext
@@ -2,3 +2,17 @@
 '''[[pronunciation]]''' - tó (to)
 
 For a list of words starting with this hiragana see: [[Wiktionary:Japanese index と]]
+
+== Particle ==
+
+# "'''and'''" (when between nouns) <br>[[彼女]][[は]][[英語]]<u>と</u>[[フランス語]][[を]][[話す|話せる]]。<br>''Kanojo wa eigo <u>to</u> furansugo o hanaseru.''<br>She can speak English <u>and</u> French.
+#* This sense of と can only be used to conjoin nouns. Verbs and sentences are conjoined by conjugation.
+#* と implies that the list is complete. In the above sentence, the subject only speaks English and Spanish. If other items are to be implied, [[とか]] or [[や]] are used instead. [[など]], the Japanese equivalent of "[[etc.]]," can be appended to a list of nouns conjoined by と to imply that there are other items on the list.
+# "'''if'''" (when appended to a dictionary form verb and followed by a present-tense sentence)
+#*[[円高]][[が]][[進む]]<u>と</u>、[[日本]][[経済]][[が]][[混乱]][[する]]。<br>''Endaka ga susumu <u>to</u>, nihon keizai ga konran suru.''<br><u>If</u> the high yen continues, the Japanese economy will be in dire straits.
+#**In conditionals which describe the hypothetical effect of an action, と is interchangable with the conditional particles [[ば]] and [[たら]]/[[なら]].
+#*[[二]]と[[三]][[を]][[かける]]<u>と</u>[[六]][[に]][[なる]]。<br>''Ni to san o kakeru <u>to</u> roku ni naru.''<br><u>If</u> [you] multiply two and three, [they] become six (= Two times three is six).
+#**In conditionals which describe the certain effect of an action, と or ば can be used, but not たら/なら.
+# "'''when'''" (when appended to a dictionary form verb and followed by a past-tense sentence)
+#*[[マンハッタン]][[へ]][[行く]]<u>と</u>、[[大学]][[の]][[友達]][[に]][[会う|会った]]。<br>''Manhattan e iku <u>to</u>, daigaku no tomodachi ni atta.''<br><u>When</u> [I] went to Manhattan, [I] met a friend from university.
+#**This use of と implies that the first action was over a short period of time, and that the second action was unanticipated; in other words, it implies that something happened abruptly. For other senses of "when," [[とき]] is used.
